# learning_to_plan

./: .gitignore  README.md  blocksworld_dataset.csv  environment.yml  makefile  prompt.txt  pyproject.toml  test.jsonl
.docker/: Dockerfile
official-misconcept-lm-plan-gen-D34B/: pyproject.toml
official-misconcept-lm-plan-gen-D34B/src/better_language_model_for_plan_generation/: settings.py
official-misconcept-lm-plan-gen-D34B/src/better_language_model_for_plan_generation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/learning_to_plan/: build_finetuning_dataset.py  call_paas.py  config.py  main.py  task.py  train.py
