[tool.poetry]
name = "learning_to_plan"
version = "0.1.0"
description = "Training LLMs for classical planning using test-time compute techniques."
authors = ["Marco Chitolina <68135699+MarcoChit0@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "learning_to_plan", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
pandas = "*"
transformers = "*"
torch = "*"
torchvision = "*"
torchaudio = "*"
accelerate = "*"
scikit-learn = "*"
aiohttp = "*"
datasets = "*"
aiofiles = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
